.py file to plot networked gas consumption by Dublin postal district for both residential and commerical sector

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,5 @@
     "remote.extensionKind": {
         "ms-azuretools.vscode-docker": "workspace"
     },
-    "python.pythonPath": "/usr/local/lib/.cache/pypoetry/virtualenvs/drem-TFRFQYJy-py3.8/bin/python"
+    "python.pythonPath": "/usr/local/lib/.cache/pypoetry/virtualenvs/drem-d4h3S_CD-py3.8/bin/python3"
 }
